# Compact-your-memory-

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: index.md
examples/: custom_scorer.py  ensemble_scorer.py  ollama_basic.py  openwebui_pipe.py
tests/: test_trimtoken.py
trimtoken/: __init__.py  budget.py  cli.py  compressor.py  exceptions.py  lmstudio.py  models.py  scorer.py  segmenter.py
trimtoken/integrations/: __init__.py  anthropic.py  ollama.py  openai_compat.py  openwebui.py
trimtoken/strategies/: __init__.py  cascade.py  drop.py  headtail.py  paraphrase.py  summarize.py
