[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trimtoken"
version = "0.1.2"
description = "Surgical context compression for Ollama, Open WebUI, LM Studio, and any local LLM"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "trimtoken contributors" }]
keywords = [
    "ollama", "llm", "context", "compression", "tokens",
    "local-llm", "open-webui", "lm-studio", "nlp", "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "tiktoken>=0.6",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
ollama    = ["ollama>=0.2"]
spacy     = ["spacy>=3.7"]
openai    = ["openai>=1.0"]
anthropic = ["anthropic>=0.25"]
langchain = ["langchain-core>=0.2"]
dev       = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = ["trimtoken[ollama,spacy,openai,anthropic,langchain]"]

[project.scripts]
trimtoken = "trimtoken.cli:main"

[project.urls]
Homepage      = "https://github.com/enfibiotech/Compact-your-memory-"
Documentation = "https://github.com/enfibiotech/Compact-your-memory-/tree/main/docs"
Repository    = "https://github.com/enfibiotech/Compact-your-memory-"
Issues        = "https://github.com/enfibiotech/Compact-your-memory-/issues"
Changelog     = "https://github.com/enfibiotech/Compact-your-memory-/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["trimtoken"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
